--- a/api/package.json
+++ b/api/package.json
@@ -10,17 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.4.2",
+    "bson": "^6.2.0",
     "express": "^4.18.2",
+    "mongodb": "^6.2.0",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^29.5.6",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.7",
     "jest": "^29.7.0",
+    "prisma": "^5.4.2",
+    "prisma-client-lib": "^1.34.12",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   }
