--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29.5.6",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.7",
+    "@types/supertest": "^2.0.15",
     "jest": "^29.7.0",
     "prisma": "^5.4.2",
     "prisma-client-lib": "^1.34.12",
