--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "bson": "^6.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "morgan": "^1.10.0",
