--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,10 +9,15 @@
             "es2015",
             "esnext.asynciterable"
         ],
+        "types": [
+            "jest",
+            "node",
+            "@types/jest"
+        ],
         "sourceMap": true,
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
     ],
     "include": [
         "./src/",
