--- a/.github/workflows/e2etest.yaml
+++ b/.github/workflows/e2etest.yaml
@@ -1,17 +1,29 @@
 name: Cypress Tests
 
-on: push
+on: [push]
 
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: api
+      start:
+        working-directory: client
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
+      - name: Install Npm Packages
+        start: npm i
+        run: npm i
+      - name: Init backend
+        run: npm run dev
+      - name: Init frontend
+        start: npm run dev
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: npm run build
-          start: npm start
+          build: npx run cypress
