--- a/.github/workflows/e2etest.yaml
+++ b/.github/workflows/e2etest.yaml
@@ -11,26 +11,28 @@ jobs:
         # os: [ubuntu-latest, macos-latest, windows-latest]
         os: [ubuntu-latest]
 
-    defaults:
-      run:
-        working-directory: api
-      run2:
-        working-directory: client
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install Npm Packages Client
+        run: npm i
+        working-directory: client
+
+      - name: Install Npm Packages API
+        run: npm i
+        working-directory: api
+    
+      - name: Init backend
+        run: npm run dev
+        working-directory: api
+      
+      - name: Init frontend
+        run2: npm run dev
+        working-directory: client
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
           build: npm run build
           start: npm start
-      - name: Install Npm Packages
-        run: npm i
-        run2: npm i
-    
-      - name: Init backend
-        run: npm i
-      
-      - name: Init frontend
-        run2: npm i
