--- a/.github/workflows/e2etest.yaml
+++ b/.github/workflows/e2etest.yaml
@@ -5,6 +5,11 @@ on: push
 jobs:
   cypress-run:
     runs-on: ${{ matrix.os }}
+    env:
+      PORT: ${{ vars.PORT }}
+      APP_URL: ${{ vars.APP_URL }}
+      VITE_API_URL: ${{ vars.VITE_API_URL }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     strategy:
       matrix:
