--- a/.github/workflows/e2etest.yaml
+++ b/.github/workflows/e2etest.yaml
@@ -32,12 +32,9 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          - name: Init backend
-            run: npm run dev
-            working-directory: api
-          
-          - name: Init frontend
-            run: npm run dev
-            working-directory: client
-          - build: npm run build
-          - start: npm start
+          build: npm run build
+          start: |
+            cd api
+            npm start
+            cd ../client
+            npm start
