--- a/.github/workflows/e2etest.yaml
+++ b/.github/workflows/e2etest.yaml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: End To End Tests
 
 on: push
 
@@ -13,8 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - name: Checkout
@@ -28,7 +27,6 @@ jobs:
         run: npm i
         working-directory: api
     
-
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
