Revert "remove browser"
This reverts commit 83c4afe827d7e8df10543798e9609e95764d99fe.

--- a/.github/workflows/e2etest.yaml
+++ b/.github/workflows/e2etest.yaml
@@ -30,6 +30,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          browser: chrome
           working-directory: client
           start: |
             npm run dev --prefix ../api
